updated cruise-ships assignment with html, css and controller.js code.  Sea animated and added to html.  Ports added to html page. Ship added to html page. Methods added to controller js to navigate ship from port to port

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "eslint-plugin-babel": "^5.2.0",
     "eslint-plugin-import": "^2.14.0",
     "jest": "^23.6.0"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.0"
   }
 }
